# Anubis

./: .env.example  .gitignore  COMMENTING_STANDARDS.md  LICENSE  README.md  main_anubis.py  pyproject.toml  test_input.py  train_wakeword.py
ai-assistant/: .gitignore  README.md  main_anubis.py
ai-assistant/src/anubis/: __init__.py
ai-assistant/src/anubis/domain/: exceptions.py  protocols.py  schemas.py
ai-assistant/src/anubis/interfaces/: api.py  routes.py
ai-assistant/src/anubis/prompts/: __init__.py
ai-assistant/src/anubis/repositories/: __init__.py  llm_openai.py
ai-assistant/src/anubis/services/: __init__.py  io_service.py
ai-assistant/tests/: test_agent.py
shader_test/: __init__.py  avatar.py  main.gd  main.tscn  project.godot  renderer.py  shader1.gdshader  shader2.gdshader  shader3.gdshader  shader4.gdshader  shader_test_py.py  shaders.py  win32_overlay.py
src/anubis/: config.py
src/anubis/domain/: __init__.py  models.py  protocols.py  schemas.py
src/anubis/interfaces/: __init__.py
src/anubis/prompts/: templates.toml
src/anubis/repositories/: conversation_memory.py  llm_gemini.py  system_windows.py
src/anubis/services/: agent.py  context.py  io_service.py  visual_feedback.py
tests/: test_agent.py  test_edge_cases.py  test_system_probe.py
wakewords/: hey_anubis.onnx
