[project]
name = "anubis-assistant"
version = "0.1.0"
description = "Production-ready AI assistant with Clean Architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "jinja2>=3.1.0",
    "structlog>=24.4.0",
    "tiktoken>=0.9.0",
    "psutil>=7.2.2",
    "pywin32>=311",
    "gputil>=1.4.0",
    "pyperclip>=1.11.0",
    "requests>=2.34.2",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "respx>=0.22.0",
]

[project.scripts]
serve = "anubis.interfaces.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anubis"]

# ──────────────────────────────────────────────
# Ruff — single tool for linting + formatting
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # assert used (fine in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["anubis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────
# Pyright — strict type checking
# ──────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]
reportMissingTypeStubs = false
reportUnknownMemberType = false

# ──────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
